# DeepLearning-LLM-Study

./: .gitignore  01_LLM_exercise.ipynb  02_STT_TTS.ipynb  03_Ollama.ipynb  04_huggingface_datasets.ipynb  05_huggingface_models.ipynb  06_huggingface_finetuning.ipynb  mydataset.json  pyproject.toml
